crates/pvm-contract-macros/tests/ui/receive_takes_self.rs

#[pvm_contract_macros::contract]
mod c {
    pub struct C;

    impl C {
        #[pvm_contract_macros::receive]
        pub fn receive(&self) {}
    }
}

fn main() {}
